Fix button alignment

--- a/src/components/Timer.module.css
+++ b/src/components/Timer.module.css
@@ -90,6 +90,7 @@
 
 @media only screen and (min-width: 768px) {
   .secondaryActions {
+    justify-content: end;
     width: 25%;
   }
 }
